manifests/base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketshop
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: ticketshop
  template:
    metadata:
      labels:
        app: ticketshop
    spec:
      serviceAccountName: ticketshop
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: ticketshop
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: ticketshop
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: ticketshop
                topologyKey: kubernetes.io/hostname
      containers:
        - name: ticketshop
          image: quay-its.epfl.ch/svc0049/ticketshop:2.7.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "10m"
              memory: "380Mi"
            limits:
              memory: "380Mi"
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 10
