manifests/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ticketshop
  name: ticketshop
spec:
  ports:
    - name: web-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: ticketshop
  type: ClusterIP
